Used delegate to simplify updating stock within the Generation module.

--- a/Modules/Generation/Module/Components/BlueButton.razor
+++ b/Modules/Generation/Module/Components/BlueButton.razor
@@ -1,13 +1,4 @@
-﻿@implements IGenerationButton
-
+﻿
 <StockButton StockButtonCss="btn btn-primary"
              Text="Generate Blue"
-             StockActionAsync=@(async db => await db.GenerateBlueAsync())
-             StockLevels=@StockLevels />
-
-@code {
-
-    [Parameter]
-    public Func<StockLevels> StockLevels { get; set; } = () => null;
-
-}
+             StockActionAsync=@(async db => await db.GenerateBlueAsync()) />
