--- a/Modules/Generation/Module/Components/RedButton.razor
+++ b/Modules/Generation/Module/Components/RedButton.razor
@@ -1,13 +1,4 @@
-﻿@implements IGenerationButton
-
+﻿
 <StockButton StockButtonCss="btn btn-danger"
              Text="Generate Red"
-             StockActionAsync=@(async db => await db.GenerateRedAsync())
-             StockLevels=@StockLevels />
-
-@code {
-
-    [Parameter]
-    public Func<StockLevels> StockLevels { get; set; } = () => null;
-
-}
+             StockActionAsync=@(async db => await db.GenerateRedAsync()) />
