Added page to allow dynamic creation of control.

--- a/Modules/Generation/Module/Components/BlueButton.razor
+++ b/Modules/Generation/Module/Components/BlueButton.razor
@@ -1,4 +1,4 @@
 ﻿
 <StockButton StockButtonCss="btn btn-primary"
              Text="Generate Blue"
-             StockActionAsync=@(async db => await db.GenerateBlueAsync()) />
+             StockActionAsync=@(db => db.GenerateBlueAsync()) />
