--- a/Modules/Generation/Module/Components/GreenButton.razor
+++ b/Modules/Generation/Module/Components/GreenButton.razor
@@ -1,4 +1,4 @@
 ﻿
 <StockButton StockButtonCss="btn btn-success"
              Text="Generate Green"
-             StockActionAsync=@(async db => await db.GenerateGreenAsync()) />
+             StockActionAsync=@(db => db.GenerateGreenAsync()) />
