--- a/Modules/Generation/Module/Components/RedButton.razor
+++ b/Modules/Generation/Module/Components/RedButton.razor
@@ -1,4 +1,4 @@
 ﻿
 <StockButton StockButtonCss="btn btn-danger"
              Text="Generate Red"
-             StockActionAsync=@(async db => await db.GenerateRedAsync()) />
+             StockActionAsync=@(db => db.GenerateRedAsync()) />
