--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -120,6 +120,14 @@
         <script src="@(layoutModel.BaseUrl)_framework/blazor.webassembly.js"></script>
     }
 
+    <script>
+        $(function () {
+            $('.dropdown-item').click(function () {
+                $('.navbar-collapse').collapse('hide')
+            });
+        });
+    </script>
+
     @RenderSection("Scripts", required: false)
 
     <script src="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.js" data-cfasync="false"></script>
