--- a/Shared/wwwroot/css/site.css
+++ b/Shared/wwwroot/css/site.css
@@ -69,3 +69,14 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.stock-counter {
+    min-width: 48px;
+    min-height: 48px;
+    line-height: 42px;
+    text-align: center;
+    padding: 0 4px 0 4px;
+    display: inline-block;
+    border-radius: 6px;
+    font-size: 24px;
+}
