--- a/Modules/Dashboard/Module/Views/Home/Index.cshtml
+++ b/Modules/Dashboard/Module/Views/Home/Index.cshtml
@@ -18,11 +18,7 @@
     <div class="row">
 
         <div class="col-sm-6">
-            @GenerationControls.RedGenerator()
-            <br />
-            @GenerationControls.GreenGenerator()
-            <br />
-            @GenerationControls.BlueGenerator()
+            @GenerationControls.ColourGenerators()
         </div>
 
         <div class="col-sm-6">
