--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -89,7 +89,7 @@
             Micro Frontends PoC in .NET
             @if (!hostEnv.IsProduction())
             {
-                <span class="float-right pl-3 pr-3" style="background: wheat;">Environment=@hostEnv.EnvironmentName</span>
+                <span class="float-right pl-3 pr-3" style="background: wheat;">@hostEnv.EnvironmentName</span>
             }
 
         </div>
