--- a/Shared/wwwroot/css/site.css
+++ b/Shared/wwwroot/css/site.css
@@ -75,7 +75,7 @@ body {
     min-height: 48px;
     line-height: 42px;
     text-align: center;
-    padding: 0 4px 0 4px;
+    padding: 2px 4px 0 4px;
     display: inline-block;
     border-radius: 6px;
     font-size: 24px;
