--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -104,6 +104,17 @@
     @if (layoutModel.EnableBlazorServerSide)
     {
         <script src="@(layoutModel.BaseUrl)_framework/blazor.server.js"></script>
+        <script>
+            var reload = function () {
+                $.ajax({
+                    url: document.location.href,
+                    error: function () { window.setTimeout(reload, 300); },
+                    success: function () { document.location.reload(); }
+                });
+            }
+
+            Blazor.defaultReconnectionHandler._reconnectCallback = reload;
+        </script>
     }
 
     @if (layoutModel.EnableBlazorClientSide)
