Ensured i-frame controls also reload.

--- a/Modules/Generation/Module/Pages/_Control.cshtml
+++ b/Modules/Generation/Module/Pages/_Control.cshtml
@@ -26,9 +26,9 @@
 
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/_content/MfePoc.Shared/js/site.js" asp-append-version="true"></script>
 
     <script src="/Generation/_framework/blazor.server.js"></script>
+    <script src="~/_content/MfePoc.Shared/js/blazorServerReload.js" asp-append-version="true"></script>
 
 </body>
 </html>
