Removed layout from mixing module.

--- a/Modules/Mixing/Server/Pages/_Host.cshtml
+++ b/Modules/Mixing/Server/Pages/_Host.cshtml
@@ -6,8 +6,7 @@
     this.SetAppLayout(
         title: "Mixing",
         baseUrl: "/Mixing/",
-        enableBlazorClientSide: true,
-        clientStyles: "MfePoc.Mixing.Client.styles.css");
+        enableBlazorClientSide: true);
 }
 
 <div id="app">Loading...</div>
