Updated index to describe service.

--- a/Modules/Mixing/Client/Pages/Index.razor
+++ b/Modules/Mixing/Client/Pages/Index.razor
@@ -1,8 +1,10 @@
 ﻿@page "/"
 @inject NavigationManager NavManager
 
-<h1>Hello, world!</h1>
+<h2>Colour Mixing Service</h2>
 
-Welcome to your new app.
+<p>This module is the colour mixing service.  It mixes primary colours generated from the generation service to make secondary colours.</p>
+
+<p>This modules uses Blazor client-side.</p>
 
 <HostDetail />
