Pulled script dependency out of shared and into Dashboard module.

--- a/Modules/Dashboard/Module/Views/Home/Index.cshtml
+++ b/Modules/Dashboard/Module/Views/Home/Index.cshtml
@@ -2,7 +2,8 @@
 @{
     this.SetAppLayout(
         title: "Dashboard",
-        baseUrl: "/Dashboard/");
+        baseUrl: "/Dashboard/",
+        customScript: "/Dashboard/lib/signalr/signalr.min.js");
 }
 
 <p>
