--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -98,7 +98,10 @@
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-    <script src="/Dashboard/lib/signalr/signalr.min.js"></script>
+    @if (!string.IsNullOrWhiteSpace(layoutModel.CustomScript))
+    {
+        <script src="@layoutModel.CustomScript"></script>
+    }
 
     @if (layoutModel.EnableBlazorServerSide)
     {
