--- a/Modules/Mixing/Client/Pages/Index.razor
+++ b/Modules/Mixing/Client/Pages/Index.razor
@@ -3,8 +3,12 @@
 
 <h2>Colour Mixing Service</h2>
 
-<p>This module is the colour mixing service.  It mixes primary colours generated from the generation service to make secondary colours.</p>
+<p>This is the colour mixing module.  It mixes primary colours generated from the generation module to make secondary colours.</p>
 
 <p>This modules uses Blazor client-side.</p>
+
+<p>
+    <a href="mix">Mix Colours</a>
+</p>
 
 <HostDetail />
