--- a/Modules/Mixing/Client/_Imports.razor
+++ b/Modules/Mixing/Client/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MfePoc.Mixing.Client
+@using MfePoc.Mixing.Client.Comms
 @using MfePoc.Mixing.Client.Components
