--- a/Modules/Mixing/Client/_Imports.razor
+++ b/Modules/Mixing/Client/_Imports.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using MfePoc.Generation.Contract
 @using MfePoc.Mixing.Client
 @using MfePoc.Mixing.Client.Comms
 @using MfePoc.Mixing.Client.Components
