Added buttons for mixing colours.

--- a/Modules/Mixing/Client/Pages/Mix.razor
+++ b/Modules/Mixing/Client/Pages/Mix.razor
@@ -2,9 +2,14 @@
 
 <h1>Mix Colours</h1>
 
+<Mixers />
+
+<br />
+<br />
+
 @GenerationControls.StockLevels().Raw()
 
-<br/>
+<br />
 
 <StockLevels />
 
