--- a/Modules/Dashboard/Module/Views/Home/Index.cshtml
+++ b/Modules/Dashboard/Module/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using MfePoc.Generation.Contract 
+﻿@using MfePoc.Generation.Contract
+@using MfePoc.Mixing.Contract
 @{
     this.SetAppLayout(
         title: "Dashboard",
@@ -24,6 +25,18 @@
 
         <div class="col-sm-6">
             @GenerationControls.StockLevels()
+        </div>
+
+    </div>
+
+    <div class="row">
+
+        <div class="col-sm-6">
+            @MixingControls.Mixers()
+        </div>
+
+        <div class="col-sm-6">
+            @MixingControls.StockLevels()
         </div>
 
     </div>
