--- a/Modules/Mixing/Server/Pages/_Control.cshtml
+++ b/Modules/Mixing/Server/Pages/_Control.cshtml
@@ -22,6 +22,7 @@
 
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/_content/MfePoc.Shared/js/mfeNotify.js"></script>
 
     <script src="/Mixing/_framework/blazor.webassembly.js"></script>
 
