--- a/Modules/Generation/Module/Pages/_Control.cshtml
+++ b/Modules/Generation/Module/Pages/_Control.cshtml
@@ -26,6 +26,7 @@
 
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/_content/MfePoc.Shared/js/mfeNotify.js"></script>
 
     <script src="/Generation/_framework/blazor.server.js"></script>
     <script src="~/_content/MfePoc.Shared/js/blazorServerReload.js" asp-append-version="true"></script>
