--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -95,6 +95,7 @@
 
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/_content/MfePoc.Shared/lib/bootstrap-notify/dist/bootstrap-notify.min.js"></script>
     <script src="~/_content/MfePoc.Shared/js/mfeNotify.js"></script>
 
     @if (!string.IsNullOrWhiteSpace(layoutModel.CustomScript))
