--- a/Shared/Views/Shared/_appLayout.cshtml
+++ b/Shared/Views/Shared/_appLayout.cshtml
@@ -1,4 +1,5 @@
 ﻿@namespace MfePoc.Shared.Views.Shared
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.AspNetCore.Hosting.IWebHostEnvironment hostEnv
 @using Microsoft.Extensions.Hosting
 @{
@@ -26,7 +27,7 @@
     <title>Micro Frontends PoC in .NET - @layoutModel.Title</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
     <link rel="stylesheet" href="~/_content/MfePoc.Shared/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/_content/MfePoc.Shared/css/site.css" />
+    <link rel="stylesheet" href="~/_content/MfePoc.Shared/css/site.css" asp-append-version="true" />
     @if (!string.IsNullOrWhiteSpace(layoutModel.BaseUrl))
     {
         <base href="@layoutModel.BaseUrl" />
@@ -96,7 +97,7 @@
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap-notify/dist/bootstrap-notify.min.js"></script>
-    <script src="~/_content/MfePoc.Shared/js/mfeNotify.js"></script>
+    <script src="~/_content/MfePoc.Shared/js/mfeNotify.js" asp-append-version="true"></script>
 
     @if (!string.IsNullOrWhiteSpace(layoutModel.CustomScript))
     {
@@ -106,7 +107,7 @@
     @if (layoutModel.EnableBlazorServerSide)
     {
         <script src="@(layoutModel.BaseUrl)_framework/blazor.server.js"></script>
-        <script src="~/_content/MfePoc.Shared/js/blazorServerReload.js"></script>
+        <script src="~/_content/MfePoc.Shared/js/blazorServerReload.js" asp-append-version="true"></script>
     }
 
     @if (layoutModel.EnableBlazorClientSide)
