--- a/Modules/Mixing/Server/Pages/_Control.cshtml
+++ b/Modules/Mixing/Server/Pages/_Control.cshtml
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="~/_content/MfePoc.Shared/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/_content/MfePoc.Shared/css/site.css" />
+    <link rel="stylesheet" href="~/_content/MfePoc.Shared/css/site.css" asp-append-version="true" />
     <base href="/Mixing/" />
 
     <style>
@@ -22,7 +22,7 @@
 
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/_content/MfePoc.Shared/js/mfeNotify.js"></script>
+    <script src="~/_content/MfePoc.Shared/js/mfeNotify.js" asp-append-version="true"></script>
 
     <script src="/Mixing/_framework/blazor.webassembly.js"></script>
 
