--- a/Modules/Generation/Module/Pages/_Control.cshtml
+++ b/Modules/Generation/Module/Pages/_Control.cshtml
@@ -18,17 +18,24 @@
 </head>
 <body>
 
+    <div id="initOverlay" style="position: absolute; height: 100%; width: 100%; background: grey; opacity: 0.2; display: flex; justify-content: center; align-items: center;">
+        <span class="spinner-border" style=""></span>
+    </div>
     @{
         var controlName = Request.Query["control"];
         var controlType = typeof(App).Assembly.GetTypes().Single(t => t.Name == controlName);
     }
     <component type="controlType" render-mode="Server" />
+    <component type="typeof(Generation.Components.CloseOverlay)" render-mode="Server" />
 
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/_content/MfePoc.Shared/js/mfeNotify.js" asp-append-version="true"></script>
 
     <script src="/Generation/_framework/blazor.server.js"></script>
+    <script>
+        window.closeOverlay = function () { $('#initOverlay').remove(); };
+    </script>
     <script src="~/_content/MfePoc.Shared/js/blazorServerReload.js" asp-append-version="true"></script>
 
 </body>
