Added spinners to Mixing controls.

--- a/Modules/Mixing/Server/Pages/_Control.cshtml
+++ b/Modules/Mixing/Server/Pages/_Control.cshtml
@@ -18,7 +18,11 @@
 </head>
 <body>
 
-    <div id="app">Loading...</div>
+    <div id="app">
+        <div id="initOverlay" style="position: absolute; height: 100%; width: 100%; background: grey; opacity: 0.2; display: flex; justify-content: center; align-items: center;">
+            <span class="spinner-border" style=""></span>
+        </div>
+    </div>
 
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
