Renamed BlazorSS2 module to Sales.

--- a/Modules/Sales/Module/Pages/Index.razor
+++ b/Modules/Sales/Module/Pages/Index.razor
@@ -2,7 +2,7 @@
 
 <p>Blazor Server Side</p>
 
-<p>This page is rendered using Blazor server-side, from module BlazorSS2</p>
+<p>This page is rendered using Blazor server-side, from module Sales</p>
 
 <Counter />
 
