--- a/Modules/Sales/Module/Pages/_Host.cshtml
+++ b/Modules/Sales/Module/Pages/_Host.cshtml
@@ -1,11 +1,11 @@
 ﻿@page "/"
-@namespace MfePoc.BlazorSS2.Pages
+@namespace MfePoc.Sales.Pages
 @using MfePoc.Shared.Views.Shared
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     this.SetAppLayout(
-        title: "BlazorSS2",
-        baseUrl: "/BlazorSS2/",
+        title: "Sales",
+        baseUrl: "/Sales/",
         enableBlazorServerSide: true);
 }
 
