--- a/Modules/Sales/Module/_Imports.razor
+++ b/Modules/Sales/Module/_Imports.razor
@@ -5,6 +5,6 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using MfePoc.BlazorSS2
-@using MfePoc.BlazorSS2.Components
-@using MfePoc.BlazorSS2.Shared
+@using MfePoc.Sales
+@using MfePoc.Sales.Components
+@using MfePoc.Sales.Shared
