--- a/Modules/Reporting/Client/Shared/NavMenu.razor
+++ b/Modules/Reporting/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">BlazorCS2</a>
+    <a class="navbar-brand" href="">Reporting</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
