--- a/Modules/Reporting/Client/_Imports.razor
+++ b/Modules/Reporting/Client/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using MfePoc.BlazorCS2.Client
-@using MfePoc.BlazorCS2.Client.Shared
+@using MfePoc.Reporting.Client
+@using MfePoc.Reporting.Client.Shared
