--- a/Modules/Reporting/Server/Pages/_Host.cshtml
+++ b/Modules/Reporting/Server/Pages/_Host.cshtml
@@ -1,13 +1,13 @@
 ﻿@page "/"
-@namespace MfePoc.BlazorCS2.Pages
+@namespace MfePoc.Reporting.Server.Pages
 @using MfePoc.Shared.Views.Shared
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     this.SetAppLayout(
-        title: "BlazorCS2",
-        baseUrl: "/BlazorCS2/",
+        title: "Reporting",
+        baseUrl: "/Reporting/",
         enableBlazorClientSide: true,
-        clientStyles: "MfePoc.BlazorCS2.Client.styles.css");
+        clientStyles: "MfePoc.Reporting.Client.styles.css");
 }
 
 <div id="app">Loading...</div>
