--- a/Modules/Mixing/Server/Pages/_Control.cshtml
+++ b/Modules/Mixing/Server/Pages/_Control.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/Control"
-@namespace MfePoc.Mixing.Pages
+@namespace MfePoc.Mixing.Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <!DOCTYPE html>
 <html lang="en">
@@ -18,17 +18,25 @@
 </head>
 <body>
 
-    <div id="app">
-        <div id="initOverlay" style="position: absolute; height: 100%; width: 100%; background: grey; opacity: 0.2; display: flex; justify-content: center; align-items: center;">
-            <span class="spinner-border" style=""></span>
-        </div>
+    <div id="initOverlay" style="position: absolute; height: 100%; width: 100%; background: grey; opacity: 0.2; display: flex; justify-content: center; align-items: center;">
+        <span class="spinner-border" style=""></span>
     </div>
+    @{
+        var controlName = Request.Query["control"];
+        var controlType = typeof(Mixing.Client.App).Assembly.GetTypes().Single(t => t.Name == controlName);
+    }
+    <component type="controlType" render-mode="Server" />
+    <component type="typeof(CloseOverlay)" render-mode="Server" />
 
     <script src="~/_content/MfePoc.Shared/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/_content/MfePoc.Shared/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/_content/MfePoc.Shared/js/mfeNotify.js" asp-append-version="true"></script>
 
-    <script src="/Mixing/_framework/blazor.webassembly.js"></script>
+    <script src="/Mixing/_framework/blazor.server.js"></script>
+    <script>
+        window.closeOverlay = function () { $('#initOverlay').remove(); };
+    </script>
+    <script src="~/_content/MfePoc.Shared/js/blazorServerReload.js" asp-append-version="true"></script>
 
 </body>
 </html>
