Updated entry text for Sales module.

--- a/Modules/Sales/Module/Pages/Index.razor
+++ b/Modules/Sales/Module/Pages/Index.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
 
-<p>Blazor Server Side</p>
+<h2>Sales Service</h2>
 
-<p>This page is rendered using Blazor server-side, from module Sales</p>
+<p>This module is the sales service.  It sells secondary colours mixed by the mixing service, and white packages (consisting of all the seconday colours).</p>
 
-<Counter />
+<p>This module uses Blazor server-side.</p>
 
 <HostDetail />
